// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splash should  render  dark theme 1`] = `
<DocumentFragment>
  <div
    class="relative flex min-h-screen flex-col pb-14 sm:pb-0"
  >
    <nav
      aria-labelledby="main menu"
      class="css-97i12m"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="flex flex-1 px-8 sm:ml-12"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex flex-1 select-none flex-col justify-center text-center css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <div
            class="mx-auto flex max-w-md justify-center"
          >
            <svg
              class="max-w-full"
            >
              welcome-banner-dark.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              ARKVault
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="mt-4 flex justify-center"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-secondary-800)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="fixed right-0 left-0 bottom-5 flex items-center justify-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div
              class="css-1aibv61"
            >
              <span
                class="relative"
              >
                <svg
                  height="12"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div>
              Version 1.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Splash should  render  light theme 1`] = `
<DocumentFragment>
  <div
    class="relative flex min-h-screen flex-col pb-14 sm:pb-0"
  >
    <nav
      aria-labelledby="main menu"
      class="css-97i12m"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="flex flex-1 px-8 sm:ml-12"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex flex-1 select-none flex-col justify-center text-center css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <div
            class="mx-auto flex max-w-md justify-center"
          >
            <svg
              class="max-w-full"
            >
              welcome-banner-light.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              ARKVault
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="mt-4 flex justify-center"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-success-200)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="fixed right-0 left-0 bottom-5 flex items-center justify-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div
              class="css-1aibv61"
            >
              <span
                class="relative"
              >
                <svg
                  height="12"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div>
              Version 1.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Splash should render without year 1`] = `
<DocumentFragment>
  <div
    class="relative flex min-h-screen flex-col pb-14 sm:pb-0"
  >
    <nav
      aria-labelledby="main menu"
      class="css-97i12m"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="flex flex-1 px-8 sm:ml-12"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex flex-1 select-none flex-col justify-center text-center css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <div
            class="mx-auto flex max-w-md justify-center"
          >
            <svg
              class="max-w-full"
            >
              welcome-banner-dark.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              ARKVault
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="mt-4 flex justify-center"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-secondary-800)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="fixed right-0 left-0 bottom-5 flex items-center justify-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div
              class="css-1aibv61"
            >
              <span
                class="relative"
              >
                <svg
                  height="12"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-fbr6jx"
              type="vertical"
            />
            <div>
              Version 1.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
